--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,5 +1,5 @@
 blank_issues_enabled: false
 contact_links:
   - name: Support Questions
-    url: https://github.com/{{.repository.owner}}/{{.repository.name}}/discussions/new
+    url: https://github.com/astrokube/pathify/discussions/new
     about: Need support & not sure if this a bug?  You can ask questions in Slack or GitHub discussions.
