--- a/.golangci.yml
+++ b/.golangci.yml
@@ -74,7 +74,7 @@ linters-settings:
     for-loops: false # Report preallocation suggestions on for loops, false by default
   wrapcheck:
     ignorePackageGlobs:
-      - github.com/astrokube/pathify/*
+      - github.com/astrokube/pathifyv2/*
 issues:
   exclude:
     - "not declared by package utf8"
